# gameReady_marketing_automation

./: README.md  main.py  pyproject.toml
assets/: agent_assets.json  heygen_assets_ids.json  marketing_angles.json
assets/prompts/: video_prompt.jinja2
prompts/: marketing_angles.json
src/: main.py  prompts.py  settings.py
src/api/: heygen.py  new_ad.py  webhook.py
src/utils/: angles.py  assets.py  heygen.py  prompts.py
