[project]
name = "gameready-marketing-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "requests>=2.33.1",
]
[dependency-groups]
dev = [
    "mypy>=1.20.0",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["venv", ".venv"]
plugins = ["pydantic.mypy"]